# kolproxy

./: Handlers.hs  HardcodedGameStuff.hs  KolproxyServer.hs  LogParser.hs  Logging.hs  Lua.hs  LuaLibrary.hs  PlatformLowlevel.hs  README.md  Server.hs  Setup.hs  State.hs  index.html  kolproxy.cabal  kolproxy.hs  params.json  proxy.hs
Database/: SQLite3Modded.hs
KoL/: Api.hs  Http.hs  HttpLowlevel.hs  Util.hs  UtilTypes.hs
Kolproxy/: Api.hs  Handlers.hs  HardcodedGameStuff.hs  Http.hs  HttpLowlevel.hs  LogParser.hs  Logging.hs  Lua.hs  LuaLibrary.hs  PlatformLowlevel.hs  Server.hs  Setup.hs  State.hs  Util.hs  UtilTypes.hs
Scripting/: LuaModded.hs  luaconf.h  ntrljmp.c
docs/: copyright  license  steps-to-build-kolproxy
fileserver/chit/: chit-stylesheet.css
fileserver/editor/: script-editor.js
scripts/: automate.lua  browser-request.lua  chat.lua  intercept.lua  loaders.lua  parselog.lua  printer.lua  process-page.lua  sendchat.lua  sentchat.lua  setup-environment.lua  update-datafiles.lua  user-loaders.lua
scripts/adventure-warnings/: adventure-notices.lua  check-florist-friar.lua  visit-people-warnings.lua
scripts/automation/: a-quest-lol.lua  aftercore-automation.lua  ascension.lua  bigautomation.lua  bigscripts.lua  castle-farming.lua  casual-macro.lua  casual-scripts.lua  chess-puzzle.lua  daily-visits.lua  delete-spookyraven-kmail.lua  dungeon-fist.lua  dungeonfist.lua  felonia.lua  macros.lua  nemesis.lua  readventuring.lua  scripts.lua  sea-hatred.lua  sea-violence.lua  sea.lua  seahorse.lua  settings.lua  setup.lua  spaaace.lua  suburbandis.lua  tasks.lua  trick-or-treat.lua  tune-flavour-of-magic.lua  turn-in-war-items.lua  wolf-game.lua
scripts/base/: api.lua  base-lua-functions.lua  charpane.lua  choice-page.lua  commands.lua  datafile.lua  fight-page.lua  info.lua  kolproxy-core-functions.lua  mafiaexpression-evaluator.lua  npc-stores.lua  other.lua  script-compiler.lua  script-functions.lua  (+3 more)
(+224 files in other folders)
