name:           Kolproxy
version:        3.5
synopsis:       Kingdom of Loathing user interface
author:         Tor Gunnar Houeland
build-type:     Simple
cabal-version:  >= 1.2

-- Helper file for compiling kolproxy with ghc-7.4.2
--
-- Used for automatically installing dependencies
--   cabal install --only-dependencies
--
-- Then e.g.:
--   ghc -threaded -DKOLPROXY_RELEASEBUILD=linux -optc-DLUA_USE_LINUX --make proxy.hs Scripting/*.c -o kolproxy

executable kolproxy
  build-depends:
    base,
    base64-bytestring >= 0.1 && < 0.2,
    bytestring >= 0.9 && < 0.10,
    bzlib >= 0.5 && < 0.6,
    cgi >= 3001.1 && < 3001.2,
    containers >= 0.4 && < 0.5,
    directory >= 1.1 && < 1.2,
    filepath >= 1.3 && < 1.4,
    json >= 0.5 && < 0.8,
    network >= 2.3 && < 2.4,
    process >= 1.1 && < 1.2,
    pureMD5 >= 2.1 && < 2.2,
    random >= 1.0 && < 1.1,
    regex-tdfa >= 1.1 && < 1.2,
    time >= 1.4 && < 1.5,
    unix >= 2.5 && < 2.6,
    xml >= 1.3 && < 1.4,
    zlib >= 0.5 && < 0.6,
    HTTP == 4000.2.3,
    cryptocipher == 0.2.5,
    direct-sqlite == 1.1,
    tls == 0.6.2,
    tls-extra == 0.2.1,
    cprng-aes == 0.2.3
  c-sources:
    Scripting/lapi.c Scripting/lauxlib.c Scripting/lbaselib.c Scripting/lcode.c
    Scripting/ldblib.c Scripting/ldebug.c Scripting/ldo.c Scripting/ldump.c
    Scripting/lfunc.c Scripting/lgc.c Scripting/linit.c Scripting/liolib.c
    Scripting/llex.c Scripting/lmathlib.c Scripting/lmem.c Scripting/loadlib.c
    Scripting/lobject.c Scripting/lopcodes.c Scripting/loslib.c Scripting/lparser.c
    Scripting/lstate.c Scripting/lstring.c Scripting/lstrlib.c Scripting/ltable.c
    Scripting/ltablib.c Scripting/ltm.c Scripting/lundump.c Scripting/lvm.c
    Scripting/lzio.c Scripting/ntrljmp.c Scripting/print.c
  cc-options: -DLUA_USE_LINUX
  ghc-options: -threaded
  main-is: proxy.hs
